feat: adicionado e concluido conteúdo referente a parte da tag header

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,18 +9,18 @@
 <body>
     <header>
         <div>
-
+            <img src="images/logo.svg" alt="logo">
         </div>
         <div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>Collections</div>
+            <div>Men</div>
+            <div>Women</div>
+            <div>About</div>
+            <div>Contact</div>
         </div>
         <div>
-            <div></div>
-            <div></div>
+            <div><img src="images/icon-cart.svg" alt="imagem cart"></div>
+            <div><img src="images/image-avatar.png" alt="foto avatar"></div>
         </div>
     </header>
     <main>
