feat: adicionado conteúdo secao lado esquerdo (lado das fotos)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -19,21 +19,33 @@
             <div>Contact</div>
         </div>
         <div>
-            <div><img src="images/icon-cart.svg" alt="imagem cart"></div>
-            <div><img src="images/image-avatar.png" alt="foto avatar"></div>
+            <div>
+                <img src="images/icon-cart.svg" alt="imagem cart">
+            </div>
+            <div>
+                <img src="images/image-avatar.png" alt="foto avatar">
+            </div>
         </div>
     </header>
     <main>
         <section>
             <div>
-
+                <img src="images/image-product-1.jpg" alt="">
             </div>
             <div>
                 <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div>
+                        <img src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1">
+                    </div>
+                    <div>
+                        <img src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2">
+                    </div>
+                    <div>
+                        <img src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3">
+                    </div>
+                    <div>
+                        <img src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4">
+                    </div>
                 </div>
             </div>
         </section>
