feat: adicionado conteúdo secao lado direito

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -51,11 +51,26 @@
         </section>
         <section>
             <div>
+                <h5>SNEAKER COMPANY</h5>
+                <h2>Fall Limited Edition <br> Sneakers</h2>
+                <p>These low-profile sneakers are your perfect casual wear companion. Featuring a 
+                    durable rubber outer sole, they’ll withstand everything the weather can offer.
+                </p>
 
+                <h3>
+                    $125.00 <span>50%</span>
+                </h3>
+                <p>$250.00</p>
             </div>
             <div>
-                <div></div>
-                <div></div>
+                <div>
+                    <div>-</div>
+                    <div>0</div>
+                    <div>+</div>
+                </div>
+                <div>
+                    <img src="images/icon-cart.svg" alt=""> Add to cart
+                </div>
             </div>
         </section>
     </main>
