refactor: mudança nas posicoes dos conteudos referente a tag header

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -10,9 +10,7 @@
 <body>
     <header>
         <div>
-            <img src="images/logo.svg" alt="logo">
-        </div>
-        <div>
+            <div><img src="images/logo.svg" alt="logo"></div>
             <div>Collections</div>
             <div>Men</div>
             <div>Women</div>
