feat: criado a class (logoeOpcoes)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="logoeOpcoes">
             <div><img src="images/logo.svg" alt="logo"></div>
             <div>Collections</div>
             <div>Men</div>
