feat: criado class (opcao) e class (collections)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -11,11 +11,11 @@
     <header>
         <div class="logoeOpcoes">
             <div><img src="images/logo.svg" alt="logo"></div>
-            <div>Collections</div>
-            <div>Men</div>
-            <div>Women</div>
-            <div>About</div>
-            <div>Contact</div>
+            <div class="opcao collections">Collections</div>
+            <div class="opcao">Men</div>
+            <div class="opcao">Women</div>
+            <div class="opcao">About</div>
+            <div class="opcao">Contact</div>
         </div>
         <div>
             <div>
