feat: criado class (divCartAvatar) e (imgAvatar)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logoeOpcoes">
+        <div class="divLogoeOpcoes">
             <div><img src="images/logo.svg" alt="logo"></div>
             <div class="opcao collections">Collections</div>
             <div class="opcao">Men</div>
@@ -17,12 +17,12 @@
             <div class="opcao">About</div>
             <div class="opcao">Contact</div>
         </div>
-        <div>
+        <div class="divCartAvatar">
             <div>
                 <img src="images/icon-cart.svg" alt="imagem cart">
             </div>
             <div>
-                <img src="images/image-avatar.png" alt="foto avatar">
+                <img class="imgAvatar" src="images/image-avatar.png" alt="foto avatar">
             </div>
         </div>
     </header>
