feat: criado class (imgLogo)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="divLogoeOpcoes">
-            <div><img src="images/logo.svg" alt="logo"></div>
+            <div class="imgLogo"><img src="images/logo.svg" alt="logo"></div>
             <div class="opcao collections">Collections</div>
             <div class="opcao">Men</div>
             <div class="opcao">Women</div>
