--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -11,11 +11,11 @@
     <header>
         <div class="divLogoeOpcoes">
             <div class="imgLogo"><img src="images/logo.svg" alt="logo"></div>
-            <div class="opcao collections">Collections</div>
-            <div class="opcao">Men</div>
-            <div class="opcao">Women</div>
-            <div class="opcao">About</div>
-            <div class="opcao">Contact</div>
+            <div class="opcao collections">Collections<div class="linhaSelectOpcao"></div></div>
+            <div class="opcao men">Men<div class="linhaSelectOpcao"></div></div>
+            <div class="opcao women">Women<div class="linhaSelectOpcao"></div></div>
+            <div class="opcao about">About<div class="linhaSelectOpcao"></div></div>
+            <div class="opcao contact">Contact<div class="linhaSelectOpcao"></div></div>
         </div>
         <div class="divCartAvatar">
             <div>
@@ -26,6 +26,7 @@
             </div>
         </div>
     </header>
+    <hr>
     <main>
         <section>
             <div>
