--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -26,7 +26,7 @@
             </div>
         </div>
     </header>
-    <hr>
+    <div class="linha"></div>
     <main>
         <section>
             <div>
