feat: criado class (secaoTotalLadoEsquerdo)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -28,7 +28,7 @@
     </header>
     <div class="linha"></div>
     <main>
-        <section>
+        <section class="secaoTotalLadoEsquerdo">
             <div>
                 <img src="images/image-product-1.jpg" alt="">
             </div>
