feat: criado class (imgProdutoPrincipal)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -30,7 +30,7 @@
     <main>
         <section class="secaoTotalLadoEsquerdo">
             <div>
-                <img src="images/image-product-1.jpg" alt="">
+                <img class="imgProdutoPrincipal" src="images/image-product-1.jpg" alt="">
             </div>
             <div>
                 <div>
