--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -33,18 +33,22 @@
                 <img class="imgProdutoPrincipal" src="images/image-product-1.jpg" alt="">
             </div>
             <div>
-                <div>
-                    <div>
-                        <img src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1">
+                <div class="opcoesImagensDoProduto">
+                    <div class="divOverlayImagens">
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1">
                     </div>
-                    <div>
-                        <img src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2">
+                    <div class="divOverlayImagens">
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2">
                     </div>
-                    <div>
-                        <img src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3">
+                    <div class="divOverlayImagens">
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3">
                     </div>
-                    <div>
-                        <img src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4">
+                    <div class="divOverlayImagens">
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4">
                     </div>
                 </div>
             </div>
