feat: criado class (secaoTotalLadoDireito)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="secaoTotalLadoDireito">
             <div>
                 <h5>SNEAKER COMPANY</h5>
                 <h2>Fall Limited Edition <br> Sneakers</h2>
