feat: criado class (paragrafo)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -57,7 +57,7 @@
             <div>
                 <h5>SNEAKER COMPANY</h5>
                 <h1>Fall Limited Edition <br> Sneakers</h1>
-                <p>These low-profile sneakers are your perfect casual wear companion. Featuring a 
+                <p class="paragrafo">These low-profile sneakers are your perfect casual wear companion. Featuring a 
                     durable rubber outer sole, they’ll withstand everything the weather can offer.
                 </p>
 
