--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -62,7 +62,7 @@
                 </p>
 
                 <h3>
-                    $125.00 <span>50%</span>
+                    $125.00 <span class="desconto">50%</span>
                 </h3>
                 <p>$250.00</p>
             </div>
