feat: criado class (precoDesconto)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -64,7 +64,7 @@
                 <h3>
                     $125.00 <span class="desconto">50%</span>
                 </h3>
-                <p>$250.00</p>
+                <p class="precoDesconto">$250.00</p>
             </div>
             <div>
                 <div>
