feat: criado class (divBotaoQuantidade)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -67,7 +67,7 @@
                 <p class="precoDesconto">$250.00</p>
             </div>
             <div>
-                <div>
+                <div class="divBotaoQuantidade">
                     <div>-</div>
                     <div>0</div>
                     <div>+</div>
