refactor: movido div dos botos para dentro de outra div existente; feat: criado class (botaoEliminar), (quantidade) e (botaoAdicionar)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -65,16 +65,16 @@
                     $125.00 <span class="desconto">50%</span>
                 </h3>
                 <p class="precoDesconto">$250.00</p>
-            </div>
-            <div>
-                <div class="divBotaoQuantidade">
-                    <div>-</div>
-                    <div>0</div>
-                    <div>+</div>
-                </div>
                 <div>
-                    <img src="images/icon-cart.svg" alt=""> Add to cart
-                </div>
+                    <div class="divBotaoQuantidade">
+                        <div class="botaoEliminar">-</div>
+                        <div class="quantidade">0</div>
+                        <div class="botaoAdicionar">+</div>
+                    </div>
+                    <div>
+                        <img src="images/icon-cart.svg" alt=""> Add to cart
+                    </div>
+                </div>  
             </div>
         </section>
     </main>
