feat: criado class (totalBotoes-Quantidade-AdicionarCart

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -65,7 +65,8 @@
                     $125.00 <span class="desconto">50%</span>
                 </h3>
                 <p class="precoDesconto">$250.00</p>
-                <div>
+                
+                <div class="totalBotoes-Quantidade-AdicionarCart">
                     <div class="divBotaoQuantidade">
                         <div class="botaoEliminar">-</div>
                         <div class="quantidade">0</div>
