refactor: atualizado class (botaoAddCart: acrescentados duas div onde ua foi posta img e a outra o text)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -73,7 +73,12 @@
                         <div class="botaoAdicionar">+</div>
                     </div>
                     <div class="botaoAddCart">
-                        <img src="images/icon-cart.svg" alt=""> Add to cart
+                        <div>
+                            <img src="images/icon-cart.svg" alt="">
+                        </div>
+                        <div>
+                            Add to cart
+                        </div>
                     </div>
                 </div>  
             </div>
