feat: criado class (divImgCart) e (divAddCart)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -73,10 +73,10 @@
                         <div class="botaoAdicionar">+</div>
                     </div>
                     <div class="botaoAddCart">
-                        <div>
+                        <div class="divImgCart">
                             <img src="images/icon-cart.svg" alt="">
                         </div>
-                        <div>
+                        <div class="divAddCart">
                             Add to cart
                         </div>
                     </div>
