refactor: criado tag button dentro da class (botaoEliminar) e (botaoAdicionar), e relocado a mesmas class nas tag`s (button) que foram criadas

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -68,16 +68,20 @@
 
                 <div class="totalBotoes-Quantidade-AdicionarCart">
                     <div class="divBotaoQuantidade">
-                        <div class="botaoEliminar">
+                        <div>
+                            <button class="botaoEliminar">
                             <div class="overlayBotaoEliminar"></div>
                             -
+                            </button>
                         </div>
                         <div id="quantidade" class="quantidade">
                             0
                         </div>
-                        <div class="botaoAdicionar">
-                            <div class="overlayBotaoAdicionar"></div>
-                            +
+                        <div>
+                            <button class="botaoAdicionar">
+                                <div class="overlayBotaoAdicionar"></div>
+                                +
+                            </button>
                         </div>
                     </div>
                     <div>
