feat: criado event (onclick) na class (botaoEliminar) e (botaoAdicionar)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -69,16 +69,16 @@
                 <div class="totalBotoes-Quantidade-AdicionarCart">
                     <div class="divBotaoQuantidade">
                         <div>
-                            <button class="botaoEliminar">
-                            <div class="overlayBotaoEliminar"></div>
-                            -
+                            <button class="botaoEliminar" onclick="clickBotaoEliminar()">
+                                <div class="overlayBotaoEliminar"></div>
+                                -
                             </button>
                         </div>
                         <div id="quantidade" class="quantidade">
                             0
                         </div>
                         <div>
-                            <button class="botaoAdicionar">
+                            <button class="botaoAdicionar" onclick="clickBotaoAdicionar()">
                                 <div class="overlayBotaoAdicionar"></div>
                                 +
                             </button>
