feat: mudado descricao de id(paragrafoDescricaoProduto) para id(paragrafoDescricaoCartVazio); adicionado escrita dentro do id(paragrafoDescricaoCartVazio)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -21,7 +21,9 @@
             <div id="divDescricaoProdutoCart">
                 <h4 id="tituloCart">Cart</h4>
                 <div id="linhaCart"></div>
-                <p id="paragrafoDescricaoProduto"></p>
+                <p id="paragrafoDescricaoCartVazio">
+                    Your cart is empty.
+                </p>
             </div>
             <div class="divCart" onclick="openCart()">
                 <div id="quantidadeCarrinho">0</div>
