feat: criado id(paragrafoDescricaoCartCheio); e apagado texto e tag(br) que estavam dentro da class(paragrafoDescricaoCartCheio)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -29,9 +29,7 @@
                         <div>
                             <img class="fotoProdutoCart" src="images/image-product-1-thumbnail.jpg" alt="">
                         </div>
-                        <div class="paragrafoDescricaoCartCheio">
-                            Fall Limited Edition Sneakers <br>
-                            $ 125.00 x 3
+                        <div class="paragrafoDescricaoCartCheio" id="paragrafoDescricaoCartCheio">
                         </div>
                         <div>
                             <img src="images/icon-delete.svg" alt="">
