feat: na class(divOverlayImagens1: foi criado event(clickFoto1), dentro da class foi criado class(clickOver) e na tag img criado events (passandoNaImg1) e (tirandoMouse1)); na class(divOverlayImagens2: foi criado event(clickFoto2), dentro da class foi criado class(clickOver) e na tag img criado events (passandoNaImg2) e (tirandoMouse2)); na class(divOverlayImagens3: foi criado event(clickFoto3), dentro da class foi criado class(clickOver) e na tag img criado events(passandoNaImg3) e (tirandoMouse3)); na class(divOverlayImagens4: foi criado event(clickFoto4), dentro da class foi criado class(clickOver) e na tag img foi criado events (passandoNaImg4) e (tirandoMouse4))

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -60,21 +60,21 @@
             </div>
             <div>
                 <div class="opcoesImagensDoProduto">
-                    <div class="divOverlayImagens">
-                        <div class="overlay"></div>
-                        <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1">
+                    <div class="divOverlayImagens1" onclick="clickFoto1(event)">
+                        <div class="overlay clickOver"></div>
+                        <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1" onmouseover="passandoNaImg1()" onmouseout="tirandoMouse1()">
                     </div>
-                    <div class="divOverlayImagens">
-                        <div class="overlay"></div>
-                        <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2">
+                    <div class="divOverlayImagens2" onclick="clickFoto2(event)">
+                        <div class="overlay clickOver"></div>
+                        <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2" onmouseover="passandoNaImg2()" onmouseout="tirandoMouse2()">
                     </div>
-                    <div class="divOverlayImagens">
-                        <div class="overlay"></div>
-                        <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3">
+                    <div  class="divOverlayImagens3" onclick="clickFoto3(event)">
+                        <div class="overlay clickOver"></div>
+                        <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3" onmouseover="passandoNaImg3()" onmouseout="tirandoMouse3()">
                     </div>
-                    <div class="divOverlayImagens">
-                        <div class="overlay"></div>
-                        <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4">
+                    <div class="divOverlayImagens4" onclick="clickFoto4(event)">
+                        <div class="overlay clickOver"></div>
+                        <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4" onmouseover="passandoNaImg4()" onmouseout="tirandoMouse4()">
                     </div>
                 </div>
             </div>
