refactor: apagado class(clicandoNaImagemPrincipal); renomeado class(secaoTotalLadoEsquerdo para secaoTotalLadoEsquerdoDepoisDoClick); renomeado class(imgProdutoPrincipal para imgProdutoPrincipalDepoisDoClick); renomeado o final de todos os eventos onmouseover e onmouseout acrescentando no final (depoisDoClik ex: passandoNaImg3DepoisDoClick)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -54,7 +54,7 @@
     </header>
     <div class="linha"></div>
     <main>
-        <section class="secaoTotalLadoEsquerdo clicandoNaImagemPrincial">
+        <section class="secaoTotalLadoEsquerdoDepoisDoClick">
             <div class="divPreviousNextFotoPrincipal">
                 <div class="divImgClose">
                     <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/></svg>
@@ -63,7 +63,7 @@
                     <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
                 </div>
                 <div>
-                    <img class="imgProdutoPrincipal" src="images/image-product-1.jpg" alt="">
+                    <img class="imgProdutoPrincipalDepoisDoClick" src="images/image-product-1.jpg" alt="">
                 </div>
                 <div class="divImgNext">
                     <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
@@ -73,19 +73,19 @@
                 <div class="opcoesImagensDoProduto">
                     <div class="divOverlayImagens1" onclick="clickFoto1(event)">
                         <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1" onmouseover="passandoNaImg1()" onmouseout="tirandoMouse1()">
+                        <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1" onmouseover="passandoNaImg1DepoisDoClick()" onmouseout="tirandoMouse1DepoisDoClick()">
                     </div>
                     <div class="divOverlayImagens2" onclick="clickFoto2(event)">
                         <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2" onmouseover="passandoNaImg2()" onmouseout="tirandoMouse2()">
+                        <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2" onmouseover="passandoNaImg2DepoisDoClick()" onmouseout="tirandoMouse2DepoisDoClick()">
                     </div>
                     <div  class="divOverlayImagens3" onclick="clickFoto3(event)">
                         <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3" onmouseover="passandoNaImg3()" onmouseout="tirandoMouse3()">
+                        <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3" onmouseover="passandoNaImg3DepoisDoClick()" onmouseout="tirandoMouse3DepoisDoClick()">
                     </div>
                     <div class="divOverlayImagens4" onclick="clickFoto4(event)">
                         <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4" onmouseover="passandoNaImg4()" onmouseout="tirandoMouse4()">
+                        <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4" onmouseover="passandoNaImg4DepoisDoClick()" onmouseout="tirandoMouse4DepoisDoClick()">
                     </div>
                 </div>
             </div>
