refactor: renomeado functions (clickFoto1 para clickFoto1AmpliandoImg), (clickFoto2 para clickFoto2AmpliandoImg), (clickFoto3 para clickFoto3AmpliandoImg) e (clickFoto4 para clickFoto4AmpliandoImg)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -71,19 +71,19 @@
             </div>
             <div>
                 <div class="opcoesImagensDoProduto">
-                    <div class="divOverlayImagens1" onclick="clickFoto1(event)">
+                    <div class="divOverlayImagens1" onclick="clickFoto1AmpliandoImg(event)">
                         <div class="overlay clickOver"></div>
                         <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1" onmouseover="passandoNaImg1DepoisDoClick()" onmouseout="tirandoMouse1DepoisDoClick()">
                     </div>
-                    <div class="divOverlayImagens2" onclick="clickFoto2(event)">
+                    <div class="divOverlayImagens2" onclick="clickFoto2AmpliandoImg(event)">
                         <div class="overlay clickOver"></div>
                         <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2" onmouseover="passandoNaImg2DepoisDoClick()" onmouseout="tirandoMouse2DepoisDoClick()">
                     </div>
-                    <div  class="divOverlayImagens3" onclick="clickFoto3(event)">
+                    <div  class="divOverlayImagens3" onclick="clickFoto3AmpliandoImg(event)">
                         <div class="overlay clickOver"></div>
                         <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3" onmouseover="passandoNaImg3DepoisDoClick()" onmouseout="tirandoMouse3DepoisDoClick()">
                     </div>
-                    <div class="divOverlayImagens4" onclick="clickFoto4(event)">
+                    <div class="divOverlayImagens4" onclick="clickFoto4AmpliandoImg(event)">
                         <div class="overlay clickOver"></div>
                         <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4" onmouseover="passandoNaImg4DepoisDoClick()" onmouseout="tirandoMouse4DepoisDoClick()">
                     </div>
