--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -64,7 +64,7 @@
                     <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
                 </div>
                 <div>
-                    <img class="imgProdutoPrincipalDepoisDoClick" src="images/image-product-1.jpg" alt="">
+                    <img class="imgProdutoPrincipalDepoisDoClick" src="" alt="">
                 </div>
                 <div class="divImgNext">
                     <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
@@ -97,19 +97,19 @@
             </div>
             <div>
                 <div class="opcoesImagensDoProduto">
-                    <div class="divOverlayImagens1" onclick="clickFoto1(event)">
+                    <div class="divOverlayImagens1" onclick="clickFoto1(event)" ondblclick="clicandoDuasVezesNaImg1()">
                         <div class="overlay clickOver"></div>
                         <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1" onmouseover="passandoNaImg1()" onmouseout="tirandoMouse1()">
                     </div>
-                    <div class="divOverlayImagens2" onclick="clickFoto2(event)">
+                    <div class="divOverlayImagens2" onclick="clickFoto2(event)" ondblclick="clicandoDuasVezesNaImg2()">
                         <div class="overlay clickOver"></div>
                         <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2" onmouseover="passandoNaImg2()" onmouseout="tirandoMouse2()">
                     </div>
-                    <div  class="divOverlayImagens3" onclick="clickFoto3(event)">
+                    <div  class="divOverlayImagens3" onclick="clickFoto3(event)" ondblclick="clicandoDuasVezesNaImg3()">
                         <div class="overlay clickOver"></div>
                         <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3" onmouseover="passandoNaImg3()" onmouseout="tirandoMouse3()">
                     </div>
-                    <div class="divOverlayImagens4" onclick="clickFoto4(event)">
+                    <div class="divOverlayImagens4" onclick="clickFoto4(event)" ondblclick="clicandoDuasVezesNaImg4()">
                         <div class="overlay clickOver"></div>
                         <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4" onmouseover="passandoNaImg4()" onmouseout="tirandoMouse4()">
                     </div>
