--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -57,7 +57,7 @@
     <main>
         <section class="secaoTotalLadoEsquerdoDepoisDoClick">
             <div class="divPreviousNextFotoPrincipal">
-                <div class="divImgClose">
+                <div class="divImgClose" onclick="fechandoImagens()">
                     <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 17 17"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/></svg>
                 </div>
                 <div class="divImgPrevious">
