feat: criado class(divImgLixeira) e event onclick(excluindoItemCart)

--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -32,7 +32,7 @@
                         </div>
                         <div class="paragrafoDescricaoCartCheio" id="paragrafoDescricaoCartCheio">
                         </div>
-                        <div>
+                        <div class="divImgLixeira" onclick="excluindoItemCart()">
                             <img src="images/icon-delete.svg" alt="">
                         </div>
                     </div>
