--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -72,21 +72,25 @@
             </div>
             <div>
                 <div class="opcoesImagensDoProduto">
-                    <div class="divOverlayImagens1" onclick="clickFoto1AmpliandoImg(event)">
-                        <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1" onmouseover="passandoNaImg1DepoisDoClick()" onmouseout="tirandoMouse1DepoisDoClick()">
+                    <div class="divOverlayImagens1" onclick="clickFoto1AmpliandoImg(event)" onmouseover="passandoNaImg1DepoisDoClick()" onmouseout="tirandoMouse1DepoisDoClick()">
+                        <div class="clickOver"></div>
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1">
                     </div>
-                    <div class="divOverlayImagens2" onclick="clickFoto2AmpliandoImg(event)">
-                        <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2" onmouseover="passandoNaImg2DepoisDoClick()" onmouseout="tirandoMouse2DepoisDoClick()">
+                    <div class="divOverlayImagens2" onclick="clickFoto2AmpliandoImg(event)" onmouseover="passandoNaImg2DepoisDoClick()" onmouseout="tirandoMouse2DepoisDoClick()">
+                        <div class="clickOver"></div>
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2">
                     </div>
-                    <div  class="divOverlayImagens3" onclick="clickFoto3AmpliandoImg(event)">
-                        <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3" onmouseover="passandoNaImg3DepoisDoClick()" onmouseout="tirandoMouse3DepoisDoClick()">
+                    <div  class="divOverlayImagens3" onclick="clickFoto3AmpliandoImg(event)" onmouseover="passandoNaImg3DepoisDoClick()" onmouseout="tirandoMouse3DepoisDoClick()">
+                        <div class="clickOver"></div>
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3">
                     </div>
-                    <div class="divOverlayImagens4" onclick="clickFoto4AmpliandoImg(event)">
-                        <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4" onmouseover="passandoNaImg4DepoisDoClick()" onmouseout="tirandoMouse4DepoisDoClick()">
+                    <div class="divOverlayImagens4" onclick="clickFoto4AmpliandoImg(event)" onmouseover="passandoNaImg4DepoisDoClick()" onmouseout="tirandoMouse4DepoisDoClick()">
+                        <div class="clickOver"></div>
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4">
                     </div>
                 </div>
             </div>
@@ -97,21 +101,26 @@
             </div>
             <div>
                 <div class="opcoesImagensDoProduto">
-                    <div class="divOverlayImagens1" onclick="clickFoto1(event)" ondblclick="clicandoDuasVezesNaImg1()">
-                        <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1" onmouseover="passandoNaImg1()" onmouseout="tirandoMouse1()">
+                    <div class="divOverlayImagens1" onclick="clickFoto1(event)" ondblclick="clicandoDuasVezesNaImg1()" onmouseover="passandoNaImg1()" onmouseout="tirandoMouse1()">
+                        <div class="clickOver"></div>
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-1-thumbnail.jpg" alt="foto tênis 1"
+                        >
                     </div>
-                    <div class="divOverlayImagens2" onclick="clickFoto2(event)" ondblclick="clicandoDuasVezesNaImg2()">
-                        <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2" onmouseover="passandoNaImg2()" onmouseout="tirandoMouse2()">
+                    <div class="divOverlayImagens2" onclick="clickFoto2(event)" ondblclick="clicandoDuasVezesNaImg2()" onmouseover="passandoNaImg2()" onmouseout="tirandoMouse2()">
+                        <div class="clickOver"></div>
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-2-thumbnail.jpg" alt="foto tênis 2">
                     </div>
-                    <div  class="divOverlayImagens3" onclick="clickFoto3(event)" ondblclick="clicandoDuasVezesNaImg3()">
-                        <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3" onmouseover="passandoNaImg3()" onmouseout="tirandoMouse3()">
+                    <div  class="divOverlayImagens3" onclick="clickFoto3(event)" ondblclick="clicandoDuasVezesNaImg3()" onmouseover="passandoNaImg3()" onmouseout="tirandoMouse3()">
+                        <div class="clickOver"></div>
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-3-thumbnail.jpg" alt="foto tênis 3">
                     </div>
-                    <div class="divOverlayImagens4" onclick="clickFoto4(event)" ondblclick="clicandoDuasVezesNaImg4()">
-                        <div class="overlay clickOver"></div>
-                        <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4" onmouseover="passandoNaImg4()" onmouseout="tirandoMouse4()">
+                    <div class="divOverlayImagens4" onclick="clickFoto4(event)" ondblclick="clicandoDuasVezesNaImg4()" onmouseover="passandoNaImg4()" onmouseout="tirandoMouse4()">
+                        <div class="clickOver"></div>
+                        <div class="overlay"></div>
+                        <img class="imagensFooter" src="images/image-product-4-thumbnail.jpg" alt="foto tênis 4">
                     </div>
                 </div>
             </div>
