--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -77,7 +77,7 @@
                     <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
                 </div>
                 <div>
-                    <img class="imgProdutoPrincipalDepoisDoClick" src="" alt="">
+                    <img class="imgProdutoPrincipalDepoisDoClick" src="images/image-product-1.jpg" alt="">
                 </div>
                 <div class="divImgNext" onclick="clickNext()">
                     <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
