--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -18,14 +18,15 @@
                 <img src="images/logo.svg" alt="logo">
             </div>
         </div>
-        <div class="divLogoeOpcoesMediaQueries">
-            <div><svg width="14" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/></svg>
+        <div class="divOpcoesMediaQueries">
+            <div class="divCloseMediaQueries">
+                <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/></svg>
             </div>
-            <div class="opcao">Collections<div class="linhaSelectOpcao"></div></div>
-            <div class="opcao">Men<div class="linhaSelectOpcao"></div></div>
-            <div class="opcao">Women<div class="linhaSelectOpcao"></div></div>
-            <div class="opcao">About<div class="linhaSelectOpcao"></div></div>
-            <div class="opcao">Contact<div class="linhaSelectOpcao"></div></div>
+            <div class="opcaoMediaQueries collectionsMediaQueries">Collections<div class="linhaSelectOpcao"></div></div>
+            <div class="opcaoMediaQueries">Men<div class="linhaSelectOpcao"></div></div>
+            <div class="opcaoMediaQueries">Women<div class="linhaSelectOpcao"></div></div>
+            <div class="opcaoMediaQueries">About<div class="linhaSelectOpcao"></div></div>
+            <div class="opcaoMediaQueries">Contact<div class="linhaSelectOpcao"></div></div>
         </div>
         <div class="divLogoeOpcoes">
             <div class="imgLogo"><img src="images/logo.svg" alt="logo"></div>
