--- a/ecommerce-product-page-main/exercicio.html
+++ b/ecommerce-product-page-main/exercicio.html
@@ -11,7 +11,7 @@
     <div class="bigOverlay"></div>
     <header>
         <div class="headerMediaQueries">
-            <div class="divMenu">
+            <div class="divMenu" onclick="abrirMenu()">
                 <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg"><path d="M16 12v3H0v-3h16Zm0-6v3H0V6h16Zm0-6v3H0V0h16Z" fill="#69707D" fill-rule="evenodd"/></svg>
             </div>
             <div class="imgLogo">
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="divOpcoesMediaQueries">
-            <div class="divCloseMediaQueries">
+            <div class="divCloseMediaQueries" onclick="fecharMenu()">
                 <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/></svg>
             </div>
             <div class="opcaoMediaQueries collectionsMediaQueries">Collections<div class="linhaSelectOpcao"></div></div>
